--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -343,11 +343,9 @@
         class="bg-hero_image bg-cover pt-l-spacing-mobile text-center lg:h-hero-height"
       >
         <article
-          class="mx-10 border-2 border-sol pt-m-spacing-mobile pl-10 pr-10 text-sol lg:h-hero-border-height"
+          class="mx-10 border-2 border-sol pt-m-spacing-mobile pl-10 pr-10 text-sol lg:grid lg:h-hero-border-height lg:place-content-center"
         >
-          <h1
-            class="font-main-heading text-h1-mobile lg:pt-xxxl-spacing-desktop lg:text-h1-desktop"
-          >
+          <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
             Abonnement
           </h1>
           <p
@@ -359,7 +357,7 @@
             class="pt-xs-spacing-mobile pb-m-spacing-mobile font-font-body text-body-mobile lg:mx-auto lg:w-1/2 lg:pt-xs-spacing-desktop lg:pb-m-spacing-desktop lg:text-body-desktop"
           >
             Med et blomsterabonnement fra Blomster Bjarne kan du nyde et udvalg
-            af årstidens blomster leveret direkte til din hoveddør *
+            af årstidens blomster leveret direkte til din hoveddør.
           </p>
         </article>
         <div class="py-s-spacing-mobile">
@@ -386,22 +384,22 @@
 
         <a
           tabindex="0"
-          class="mx-auto mt-xl-spacing-mobile grid w-2/3 justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-[10px] px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/2 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+          class="mx-auto mt-xl-spacing-mobile mb-xl-spacing-mobile grid w-2/3 justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-[10px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/2 lg:py-[15px] lg:text-button-desktop"
           href="abonnement1.html"
           >Tegn mit abonnement</a
         >
 
         <!------------------------------- INFO -->
-        <article class="my-xl-spacing-mobile grid gap-s-spacing-mobile">
+        <article class="grid gap-s-spacing-mobile lg:my-xl-spacing-mobile">
           <p
-            class="mx-auto w-1/2 font-font-body text-abonnement-text-info lg:text-body-desktop"
+            class="mx-auto w-4/5 font-font-body text-abonnement-text-info lg:w-1/2 lg:text-body-desktop"
           >
             * Udlevering vil finde sted om torsdagen inden for arbejdstiden. Du
             vil blive opkrævet en engangsbetaling på 20 DKK. depositum for
             leveringsspanden.
           </p>
           <p
-            class="mx-auto w-1/2 font-font-body text-abonnement-text-info lg:text-body-desktop"
+            class="mx-auto w-4/5 font-font-body text-abonnement-text-info lg:w-1/2 lg:text-body-desktop"
           >
             * Billederne er blot en repræsentation af, hvad spanden kunne
             indeholde til prisen. Typerne af blomster kan variere afhængigt af
@@ -410,13 +408,13 @@
         </article>
       </section>
       <h2
-        class="pt-s-spacing-mobile pb-xl-spacing-mobile text-center font-other-headings text-h2-mobile"
+        class="pb-xl-spacing-mobile text-center font-other-headings text-h2-mobile"
       >
         Sådan fungerer det
       </h2>
 
       <!------------------------------- SÅDAN GØR DU -->
-      <section class="pb-xxl-spacing-mobile">
+      <section class="pb-xxl-spacing-mobile lg:px-[80px]">
         <article
           class="mx-7 flex gap-10 overflow-x-scroll lg:grid lg:grid-cols-2 lg:overflow-hidden lg:overflow-x-auto"
         >
