--- a/src/abonnement2.html
+++ b/src/abonnement2.html
@@ -357,7 +357,7 @@
       </section>
       <!-- PROGRESS BAR SLUT -->
       <!---------------------------------------------- FØRSTE SEKTION -->
-      <section class="mx-auto grid text-center">
+      <section class="mx-[30px] grid text-center lg:mx-[80px]">
         <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
           Hvilken stil skal din buket have?
         </h1>
