--- a/src/abonnement4.html
+++ b/src/abonnement4.html
@@ -364,7 +364,7 @@
         <!-- PROGRESS BAR SLUT -->
       </section>
       <!---------------------------------------------- FØRSTE SEKTION -->
-      <section class="text-center">
+      <section class="mx-[30px] text-center lg:mx-[80px]">
         <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
           Hvor ofte vil du have din buket leveret?
         </h1>
