--- a/src/index.html
+++ b/src/index.html
@@ -466,7 +466,7 @@
             />
           </figure>
           <div
-            class="my-auto text-center lg:px-xl-spacing-desktop lg:pt-l-spacing-desktop"
+            class="mx-[30px] my-auto text-center lg:px-xl-spacing-desktop lg:pt-l-spacing-desktop"
           >
             <h1
               tabindex="0"
