--- a/src/vaser.html
+++ b/src/vaser.html
@@ -324,7 +324,7 @@
         <!------------------------------- KNAP -->
 
         <h2 class="font-other-headings text-h2-mobile lg:text-h2-desktop">
-          Blomster
+          Vaser
         </h2>
         <p
           class="py-l-spacing-mobile font-font-body text-body-mobile lg:pt-l-spacing-desktop lg:pb-xxl-spacing-desktop lg:text-body-desktop"
@@ -516,7 +516,7 @@
 
       <!---------------------------------------------- TREDJE SEKTION -->
       <section
-        class="mx-auto w-10/12 pt-l-spacing-mobile pb-xl-spacing-mobile text-center font-font-body text-body-mobile lg:py-xxl-spacing-desktop"
+        class="mx-[30px] pt-l-spacing-mobile pb-xl-spacing-mobile text-center font-font-body text-body-mobile lg:mx-[80px] lg:py-xxl-spacing-desktop"
       >
         <p>Øv, du er nået til enden.</p>
         <p class="pb-xl-spacing-mobile lg:pb-xl-spacing-desktop">
@@ -524,8 +524,11 @@
           bestil et abonnement i dag!
         </p>
         <div>
-          <a class="" href="abonnement1.html"
-            ><button class="mx-auto">Tegn mit abonnement</button></a
+          <a
+            tabindex="0"
+            class="mx-auto flex w-1/2 flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/3 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+            href="abonnement.html"
+            >Tegn mit abonnement</a
           >
         </div>
       </section>
