--- a/src/abonnement1.html
+++ b/src/abonnement1.html
@@ -349,7 +349,7 @@
       </section>
       <!-- PROGRESS BAR SLUT -->
       <!---------------------------------------------- FØRSTE SEKTION -->
-      <section class="text-center">
+      <section class="mx-[30px] text-center lg:mx-[80px]">
         <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
           Hvilken størrelse buket ønsker du?
         </h1>
@@ -364,7 +364,7 @@
 
       <!---------------------------------------------- ANDEN SEKTION -->
       <section
-        class="flex flex-wrap justify-center gap-l-spacing-mobile pb-l-spacing-mobile lg:pb-l-spacing-desktop"
+        class="mx-[30px] flex flex-wrap justify-center gap-l-spacing-mobile pb-l-spacing-mobile lg:mx-[80px] lg:pb-l-spacing-desktop"
       >
         <!-- CARD 1 -->
         <article
