--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -385,7 +385,7 @@
       </section>
       <!-- PROGRESS BAR SLUT -->
       <!---------------------------------------------- FØRSTE SEKTION -->
-      <section class="text-center">
+      <section class="mx-[30px] text-center lg:mx-[80px]">
         <h1 class="font-main-heading text-h1-mobile lg:text-h1-desktop">
           Er du sensitiv over for stærk blomsterduft?
         </h1>
