--- a/src/cookie.html
+++ b/src/cookie.html
@@ -475,23 +475,7 @@
       </article>
     </footer>
 
-    <script>
-      const acceptCookie = document.querySelector("#accepter");
-      const denyCookie = document.querySelector("#afvis");
-      const cookieboks = document.querySelector("#cookieboks");
-
-      acceptCookie.addEventListener("click", fjernCookieBoks);
-      denyCookie.addEventListener("click", fjernCookieBoks);
-
-      function fjernCookieBoks() {
-        cookieboks.classList.add("hidden");
-        sessionStorage.setItem("fjerncookieboks", true);
-      }
-
-      if (sessionStorage.getItem("fjerncookieboks")) {
-        fjernCookieBoks.classList.add("hidden");
-      }
-    </script>
+    <script></script>
     <script type="module" src="main.js"></script>
   </body>
 </html>
