--- a/src/betal.html
+++ b/src/betal.html
@@ -316,10 +316,10 @@
       <!-- MENUPUNKTER SLUT -->
     </header>
     <main
-      class="mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px] lg:pb-xl-spacing-desktop"
+      class="mx-[60px] pb-l-spacing-mobile lg:mx-[160px] lg:pb-xl-spacing-desktop"
     >
       <!-- sektion 1 -->
-      <section>
+      <section class="">
         <!-- progress bar -->
         <article
           class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
@@ -376,7 +376,7 @@
       </section>
 
       <!-- sektion 2 -->
-      <section class="mx-[30px] grid gap-xl-spacing-mobile">
+      <section class="grid gap-xl-spacing-mobile">
         <!-- ordreoversigt -->
         <article>
           <!-- overskrift -->
@@ -388,7 +388,7 @@
           </div>
           <!-- priser -->
           <div
-            class="mb-l-spacing-mobile grid gap-l-spacing-mobile font-font-body text-body-mobile"
+            class="mb-m-spacing-mobile grid gap-m-spacing-mobile font-font-body text-body-mobile"
           >
             <div class="flex justify-between">
               <p>Blomsterabonnement</p>
@@ -429,9 +429,7 @@
             </p>
           </div>
           <!-- metoder -->
-          <div
-            class="flex flex-col gap-[27px] pb-l-spacing-mobile lg:gap-[44px]"
-          >
+          <div class="flex flex-col gap-[27px] lg:gap-[44px]">
             <a href="betal_kreditkort.html">
               <div
                 class="grid h-[50px] w-[330px] border-2 border-color-black hover:scale-105 lg:h-[100px] lg:w-[490px]"
@@ -447,11 +445,6 @@
               <div
                 class="flex h-[50px] w-[330px] place-content-center gap-10 border-2 border-color-black hover:scale-105 lg:h-[100px] lg:w-[490px]"
               >
-                <!-- <img
-                  class="my-auto h-10 w-10"
-                  src="img/ikoner/kreditkort_ikon.svg"
-                  alt="betalingskort ikon"
-                /> -->
                 <h4
                   class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
                 >
@@ -462,22 +455,14 @@
           </div>
 
           <!-- knapper -->
-          <div>
-            <!-- rediger -->
-            <div class="flex place-content-center">
-              <a
-                tabindex="0"
-                class="flex w-1/2 justify-center rounded-radius-mobile border-[1px] border-rust-500 bg-regnorm-100 py-[5px] px-[10px] font-button-text text-button-mobile text-rust-800 drop-shadow-buttonshadow hover:bg-rust-200 lg:w-1/2 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
-                href="information.html"
-              >
-                Rediger ordre
-              </a>
-            </div>
+          <div
+            class="grid gap-xxs-spacing-mobile pt-m-spacing-mobile lg:flex lg:justify-end lg:gap-m-spacing-desktop"
+          >
             <!-- videre -->
-            <div class="flex place-content-center">
+            <div class="grid justify-end">
               <a
                 tabindex="0"
-                class="mx-auto mt-s-spacing-mobile grid w-2/3 justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-[10px] px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/2 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+                class="mx-auto grid justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-[10px] px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-[15px]"
                 href="betal_kreditkort.html"
                 >Fortsæt til betaling</a
               >
