--- a/src/betal_bekraeft.html
+++ b/src/betal_bekraeft.html
@@ -307,10 +307,10 @@
       <!-- MENUPUNKTER SLUT -->
     </header>
     <main
-      class="mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px] lg:pb-xl-spacing-desktop"
+      class="mx-[60px] pb-l-spacing-mobile lg:mx-[160px] lg:pb-xl-spacing-desktop"
     >
       <!-- sektion 1  TAK -->
-      <section class="mx-[30px]">
+      <section class="">
         <!-- progress bar -->
         <article
           class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
@@ -373,7 +373,7 @@
       </section>
 
       <!-- sektion 2  ORDREOVERSIGT -->
-      <section class="mx-[30px] grid gap-s-spacing-mobile">
+      <section class="grid gap-s-spacing-mobile">
         <!-- ordreoversigt -->
         <article>
           <!-- overskrift -->
