--- a/src/information.html
+++ b/src/information.html
@@ -294,10 +294,10 @@
       <!-- MENUPUNKTER SLUT -->
     </header>
     <main
-      class="mx-[30px] pb-xxl-spacing-mobile lg:mx-[80px] lg:pb-xl-spacing-desktop"
+      class="mx-[60px] pb-l-spacing-mobile lg:mx-[160px] lg:pb-xl-spacing-desktop"
     >
       <!-- sektion 1 -->
-      <section>
+      <section class="">
         <!-- progress bar -->
         <article
           class="grid place-content-center pb-l-spacing-mobile lg:pb-xl-spacing-desktop"
@@ -345,7 +345,7 @@
         <article class="pb-l-spacing-mobile">
           <div>
             <h1
-              class="text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h1-desktop"
+              class="text-center font-main-heading text-h1-mobile lg:text-h1-desktop"
             >
               Information
             </h1>
@@ -354,7 +354,9 @@
       </section>
 
       <!-- sektion 2 -->
-      <section class="mx-[30px] grid gap-xl-spacing-mobile">
+      <section
+        class="grid gap-xl-spacing-mobile lg:grid-cols-2 lg:gap-xxxl-spacing-desktop"
+      >
         <!-- ordreoversigt -->
         <article>
           <!-- overskrift -->
@@ -366,7 +368,7 @@
           </div>
           <!-- priser -->
           <div
-            class="mb-l-spacing-mobile grid gap-l-spacing-mobile font-font-body text-body-mobile"
+            class="mb-m-spacing-mobile grid gap-m-spacing-mobile font-font-body text-body-mobile"
           >
             <div class="flex justify-between">
               <p>Blomsterabonnement</p>
@@ -402,14 +404,14 @@
             <div class="border-[0.5px] border-color-black"></div>
           </div>
           <!-- forms -->
-          <div class="grid gap-l-spacing-mobile">
+          <div class="grid gap-m-spacing-mobile lg:gap-s-spacing-desktop">
             <!-- navn -->
             <div class="grid gap-xxs-spacing-mobile">
               <label class="font-other-headings text-h5-mobile" for="full-name"
                 >For- og efternavn <span class="text-rust-600">*</span></label
               >
               <input
-                class="rounded-radius-mobile p-1 pl-2 font-font-body text-abonnement-text-info lg:p-5 lg:pl-2"
+                class="rounded-radius-mobile p-1 pl-2 font-font-body text-abonnement-text-info lg:p-[4px] lg:pl-2"
                 type="text"
                 inputmode="text"
                 placeholder="Fx. Sofie Hansen"
@@ -421,7 +423,7 @@
                 >Leveringsadresse <span class="text-rust-600">*</span></label
               >
               <input
-                class="rounded-radius-mobile p-1 pl-2 font-font-body text-abonnement-text-info lg:p-5 lg:pl-2"
+                class="rounded-radius-mobile p-1 pl-2 font-font-body text-abonnement-text-info lg:p-[4px] lg:pl-2"
                 type="text"
                 inputmode="text"
                 placeholder="Fx. Strandvejen 167, 2900 Hellerup"
@@ -433,7 +435,7 @@
                 >E-mail <span class="text-rust-600">*</span></label
               >
               <input
-                class="rounded-radius-mobile p-1 pl-2 font-font-body text-abonnement-text-info lg:p-5 lg:pl-2"
+                class="rounded-radius-mobile p-1 pl-2 font-font-body text-abonnement-text-info lg:p-[4px] lg:pl-2"
                 type="email"
                 inputmode="email"
                 placeholder="Fx. sofia@gmail.com"
@@ -445,7 +447,7 @@
                 >Telefonnummer</label
               >
               <input
-                class="rounded-radius-mobile p-1 pl-2 font-font-body text-abonnement-text-info lg:p-5 lg:pl-2"
+                class="rounded-radius-mobile p-1 pl-2 font-font-body text-abonnement-text-info lg:p-[4px] lg:pl-2"
                 type="tel"
                 inputmode="tel"
                 placeholder="Fx. +45 12345678"
@@ -453,9 +455,7 @@
             </div>
           </div>
           <!-- ekstra informationer -->
-          <div
-            class="mt-s-spacing-mobile grid gap-l-spacing-mobile pb-l-spacing-mobile"
-          >
+          <div class="mt-m-spacing-mobile grid gap-l-spacing-mobile">
             <!-- bemærkninger -->
             <div class="grid gap-xxs-spacing-mobile">
               <label class="font-other-headings text-h5-mobile" for="address"
@@ -488,24 +488,25 @@
             </div>
           </div>
           <!-- knapper -->
-          <div>
+          <div
+            class="grid gap-xxs-spacing-mobile pt-m-spacing-mobile lg:flex lg:justify-end lg:gap-m-spacing-desktop"
+          >
             <!-- tilbage -->
-            <div class="flex place-content-center">
+            <div class="grid justify-end">
               <a
                 tabindex="0"
-                class="flex w-1/2 justify-center rounded-radius-mobile border-[1px] border-rust-500 bg-regnorm-100 py-[5px] px-[10px] font-button-text text-button-mobile text-rust-800 drop-shadow-buttonshadow hover:bg-rust-200 lg:w-1/2 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
-                href="kurv.html"
+                class="mx-auto grid justify-center rounded-radius-mobile border-2 border-rust-500 bg-regnorm-100 py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-rust-800 drop-shadow-buttonshadow hover:bg-rust-200 lg:w-full lg:py-[15px]"
+                href="information.html"
+                >Tilbage</a
               >
-                Tilbage
-              </a>
             </div>
             <!-- videre -->
-            <div class="flex place-content-center">
+            <div class="grid justify-end">
               <a
                 tabindex="0"
-                class="mx-auto mt-s-spacing-mobile grid w-2/3 justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-[10px] px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/2 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
+                class="py-xxs-py-xxs-spacing-mobile mx-auto grid justify-center rounded-radius-mobile border-0 bg-color-primary-button-background px-[50px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-[15px]"
                 href="betal.html"
-                >Fortsæt til betaling</a
+                >Videre</a
               >
             </div>
           </div>
