--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -380,15 +380,16 @@
       >
         <!------------------------------- KNAP -->
 
-        <a
-          tabindex="0"
-          class="mx-auto mt-xl-spacing-mobile mb-xl-spacing-mobile grid w-2/3 justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-[10px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/2 lg:py-[15px] lg:text-button-desktop"
-          href="abonnement1.html"
-          >Tegn mit abonnement</a
-        >
-
+        <div class="grid justify-center py-xl-spacing-mobile lg:pt-[70px]">
+          <a
+            tabindex="0"
+            class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
+            href="abonnement1.html"
+            >Tegn mit abonnement</a
+          >
+        </div>
         <!------------------------------- INFO -->
-        <article class="grid gap-s-spacing-mobile lg:my-xl-spacing-mobile">
+        <article class="grid gap-s-spacing-mobile">
           <p
             class="mx-auto w-4/5 font-font-body text-abonnement-text-info lg:w-1/2 lg:text-body-desktop"
           >
