--- a/src/abonnement3.html
+++ b/src/abonnement3.html
@@ -444,15 +444,13 @@
       </section>
 
       <!---------------------------------------------- TREDJE SEKTION -->
-      <section
-        class="flex place-content-center pt-l-spacing-mobile pb-xxl-spacing-mobile lg:pt-xl-spacing-desktop lg:pb-xxl-spacing-desktop"
-      >
+      <section class="grid justify-center py-l-spacing-mobile">
         <a
-          class="flex flex-row-reverse rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-sbutton-padding-x-mobile py-sbutton-padding-y-mobile font-button-text text-button-mobile font-semibold text-rust-800 hover:bg-rust-200 lg:px-sbutton-padding-x-desktop lg:py-sbutton-padding-y-desktop lg:text-button-desktop"
+          tabindex="0"
+          class="mx-auto grid w-full justify-center rounded-radius-mobile border-2 border-rust-500 bg-color-secondary-button-background px-[30px] font-button-text text-button-mobile text-rust-800 drop-shadow-buttonshadow hover:bg-rust-200 lg:w-full lg:py-xs-spacing-mobile"
           href="abonnement4.html"
+          >Næste trin</a
         >
-          Næste trin
-        </a>
       </section>
     </main>
 
