--- a/src/blomster.html
+++ b/src/blomster.html
@@ -1405,16 +1405,16 @@
         class="mx-[30px] pt-l-spacing-mobile pb-xl-spacing-mobile text-center font-font-body text-body-mobile lg:mx-[80px] lg:py-xxl-spacing-desktop"
       >
         <h5>Øv, du er nået til enden.</h5>
-        <p class="lg:pb-xl-spacing-deskto pb-xl-spacing-mobile">
+        <p class="lg:pb-xl-spacing-deskto">
           Kan du ikke bestemme dig for én enkelt? Fri dig selv for besværet og
           bestil et abonnement i dag!
         </p>
-        <div>
+        <div class="grid justify-center py-xl-spacing-mobile lg:pt-[70px]">
           <a
             tabindex="0"
-            class="mx-auto flex w-1/2 flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-1/3 lg:py-[15px] lg:px-[60px] lg:text-button-desktop"
-            href="abonnement.html"
-            >Tegn mit abonnement</a
+            class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
+            href="blomster.html"
+            >Udforsk sortimentet</a
           >
         </div>
       </section>
