--- a/src/index.html
+++ b/src/index.html
@@ -493,6 +493,7 @@
               buketter fra hver sæson.
             </p>
             <!-- CTA START -->
+
             <div
               class="mx-auto mt-s-spacing-desktop flex h-[50px] w-[70%] items-center justify-center gap-xs-spacing-mobile rounded-radius-desktop bg-color-primary-button-background py-s-spacing-mobile drop-shadow-buttonshadow hover:cursor-pointer hover:bg-color-primary-button-hover-background lg:w-[65%]"
             >
@@ -566,7 +567,7 @@
           <div class="knap grid justify-center">
             <button
               id="accepter"
-              class="flex w-[400px] items-center justify-center rounded-radius border-0 bg-rust-400 py-[10px] px-[40px] font-button-text text-button-mobile text-color-black drop-shadow-buttonshadow hover:bg-rust-500 lg:h-10 lg:w-[200px] lg:py-[15px] lg:px-[60px] lg:text-button-mobile"
+              class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
             >
               Accepter
             </button>
@@ -616,13 +617,11 @@
           netop den vase eller den blomst, der skal være en del af dit
           enestående hjem.
         </p>
-        <div
-          class="flex justify-center py-xl-spacing-mobile lg:py-xl-spacing-desktop"
-        >
+        <div class="grid justify-center py-xl-spacing-mobile lg:pt-[70px]">
           <a
             tabindex="0"
-            class="flex flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px]"
-            href=""
+            class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
+            href="blomster.html"
             >Se vores udvalg af blomster</a
           >
         </div>
@@ -874,16 +873,10 @@
           </article>
         </section>
 
-        <!-- <div tabindex="0" class="primary py-xl-spacing-mobile">
-          <button class="mx-auto">Udforsk sortimentet</button>
-        </div> -->
-
-        <div
-          class="flex justify-center py-xl-spacing-mobile lg:py-xl-spacing-desktop"
-        >
+        <div class="grid justify-center py-xl-spacing-mobile lg:pt-[70px]">
           <a
             tabindex="0"
-            class="flex flex-row items-center justify-center gap-[10px] rounded-radius-mobile border-0 bg-color-primary-button-background py-[15px] px-[40px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:py-[15px] lg:px-[60px]"
+            class="mx-auto grid w-full justify-center rounded-radius-mobile border-0 bg-color-primary-button-background py-xxs-spacing-mobile px-[30px] font-button-text text-button-mobile text-color-white drop-shadow-buttonshadow hover:bg-color-primary-button-hover-background lg:w-full lg:py-xs-spacing-mobile"
             href="blomster.html"
             >Udforsk sortimentet</a
           >
